fix(svg-editor):disable Edit Attributes while preview mode is true

--- a/src/app/components/svg-editor/svg-editor.component.html
+++ b/src/app/components/svg-editor/svg-editor.component.html
@@ -10,7 +10,8 @@
           <mat-icon>color_lens</mat-icon>
           Change Selected Element Color
         </button>
-        <button mat-raised-button color="primary" (click)="showAttributesDialog()" [disabled]="!selectedElement">
+        <button mat-raised-button color="primary" (click)="showAttributesDialog()"
+                [disabled]="!selectedElement || previewMode">
           <mat-icon>edit</mat-icon>
           Edit Attributes
         </button>
