--- a/src/app/components/svg-editor/svg-editor.component.scss
+++ b/src/app/components/svg-editor/svg-editor.component.scss
@@ -3,8 +3,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 80vh; /* حداکثر ارتفاع صفحه */
-  overflow: hidden; /* مخفی کردن هر چیزی که از حداکثر اندازه خارج شود */
+  height: 80vh;
+  overflow: hidden;
 }
 
 .svg-label {
@@ -15,8 +15,8 @@
 }
 
 .preview-mode {
-  pointer-events: none;
-  opacity: 0.7;
+  //pointer-events: none;
+  //opacity: 0.7;
   border: 2px dashed red;
 }
 
