--- a/src/app/components/svg-editor/svg-editor.component.css
+++ b/src/app/components/svg-editor/svg-editor.component.css
@@ -35,3 +35,20 @@
   max-width: 100%;
   object-fit: contain;
 }
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-direction: row;
+}
+
+.flex-around {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10px;
+  flex-direction: row;
+}
+
