--- a/src/app/components/svg-editor/svg-editor.component.css
+++ b/src/app/components/svg-editor/svg-editor.component.css
@@ -1,54 +1,38 @@
-.svg-container {
+.container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 80vh;
+  height: 90vh;
+  width: 95vw;
+  max-height: 90vh;
+  flex-direction: row;
+  margin: 1vh;
   overflow: hidden;
 }
 
-.svg-label {
-  font-family: Arial, sans-serif;
-  font-weight: bold;
-  font-size: 20px;
-  pointer-events: none;
-}
-
-.preview-mode {
-  border: 2px dashed red;
-}
-
-.hidden {
-  display: block;
-}
-
-.custom-btn {
+.sidebar {
+  width: 15%;
+  background: #f4f4f4;
   display: flex;
-  justify-content: start;
-  width: 100%;
-  gap: 5px;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  gap: 2vh;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
-.svg {
-  height: 100%;
-  width: auto;
-  max-width: 100%;
-  object-fit: contain;
-}
-
-.flex-center {
+.svg-container {
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  flex-direction: row;
+  max-height: max-content;
+  margin: 20px;
 }
 
-.flex-around {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-bottom: 10px;
-  flex-direction: row;
+button {
+  width: 100%;
 }
 
+.preview-mode {
+  border: dashed red;
+  padding: 5px;
+}
