--- a/src/app/components/svg-preview-dialog/svg-preview-dialog.component.html
+++ b/src/app/components/svg-preview-dialog/svg-preview-dialog.component.html
@@ -5,6 +5,6 @@
   </div>
 </div>
 <div mat-dialog-actions align="end">
-  <button mat-button (click)="onReUpload()">Re-upload</button>
+  <button mat-button (click)="onReUpload()">Reupload</button>
   <button mat-raised-button color="primary" (click)="onContinue()">Continue to edit</button>
 </div>
