fix(labels-dialog):fix deploy errs

--- a/src/app/components/svg-preview-dialog/svg-preview-dialog.component.html
+++ b/src/app/components/svg-preview-dialog/svg-preview-dialog.component.html
@@ -1,7 +1,12 @@
 <h2 mat-dialog-title>Preview SVG</h2>
 <div mat-dialog-content>
   <div class="preview-container">
-    <div #svgContainer class="svg-preview"></div>
+    <!--    <div #svgContainer class="svg-preview"></div>-->
+    <div #svgContainer class="svg-preview">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
+        <g></g>
+      </svg>
+    </div>
   </div>
 </div>
 <div mat-dialog-actions align="end">
